tests-integration/fixtures/checking/094_let_binding_constraint_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Foo :: Foo
eq :: forall (a :: Type). Eq (a :: Type) => (a :: Type) -> (a :: Type) -> Boolean
test :: Boolean

Types
Foo :: Type
Eq :: Type -> Constraint

Data
Foo
  Quantified = :0
  Kind = :0


Roles
Foo = []

Classes
class Eq (a :: Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Eq Foo
  --> 10:1..12:11
   |
10 | test =
   | ^~~~~~
